# fractal-zoom

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/app/: mod.rs  state.rs
src/app/view/: coord_control.rs  mod.rs  move_direction.rs  rot_control.rs  rotate_direction.rs  view_control.rs  zoom_control.rs  zoom_direction.rs
src/fractal/: blancmange.rs  blancmange.wgsl  cantor.rs  cantor.wgsl  color.wgsl  colormap.wgsl  complex.wgsl  consts.wgsl  feigenbaum.rs  feigenbaum.wgsl  fibonacci_hamiltonian.rs  fibonacci_hamiltonian.wgsl  fibonacci_hamiltonian_julia.rs  fibonacci_hamiltonian_julia.wgsl  fibonacci_hamiltonian_mandelbrot.rs  fibonacci_hamiltonian_mandelbrot.wgsl  fibonacci_snowflake.rs  fibonacci_snowflake.wgsl  global_bindings.wgsl  heighway_dragon.rs  heighway_dragon.wgsl  henon.rs  henon.wgsl  julia.rs  julia.wgsl  mandelbrot.rs  mandelbrot.wgsl  mod.rs  pendulum.rs  pendulum.wgsl  rauzy.rs  rauzy.wgsl  supergolden.rs  supergolden.wgsl  supergolden_julia.rs  supergolden_julia.wgsl  supergolden_mandelbrot.rs  supergolden_mandelbrot.wgsl  wgsl_bindgen.rs
src/fractal/lib/: colormap.wgsl  complex.wgsl  consts.wgsl  global_bindings.wgsl
