[package]
name = "fractal-zoom"
version = "0.1.0"
authors = ["Sigurd Sætherø Spangelo"]
edition = "2024"
license = "MIT"
description = "Fractal zoom in the terminal"
repository = "https://github.com/sigurd4/fractal-zoom"
keywords = ["fractal", "visuals", "terminal"]
categories = ["mathematics"]
resolver = "3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddef = "0.3.0"
rand = "0.9.2"
num-traits = "0.2.19"
num-complex = "0.4.6"
anyhow = "1.0.100"

wgpu = { version = "28.0.0", features = ["naga-ir"] }
bytemuck = { version = "1.25.0", features = ["derive"] }

glam = { version = "0.31.0", features = ["std", "encase", "bytecheck"] }
naga_oil = { version = "0.21.0" }
encase = "0.12.0"

winit = "0.30.12"
futures = "0.3.31"

[build-dependencies]
wgsl_bindgen = { version = "0.21.3", features = ["nalgebra"]}
miette = { version = "7.6.0", features = ["fancy"] }
anyhow = "1.0.100"